--- a/views/login_admin.hbs
+++ b/views/login_admin.hbs
@@ -39,7 +39,7 @@
     const email=document.getElementById("email").value
     const password=document.getElementById("password").value
     try{
-        fetch("http://localhost:3030/api/admin/login",{
+        fetch("http://45.130.148.240:3030/api/admin/login",{
             method:"POST",
             headers:{
                 "content-Type":"application/json"
