--- a/views/login_author.hbs
+++ b/views/login_author.hbs
@@ -40,7 +40,7 @@
     const email=document.getElementById("email").value
     const password=document.getElementById("password").value
     try{
-        fetch("http://localhost:3030/api/author/login",{
+        fetch("http://45.130.148.240:3030/api/author/login",{
             method:"POST",
             headers:{
                 "content-Type":"application/json"
